# shein_other

./: README.md
python_helpers/: .gitignore  README.md  pyproject.toml  text_collector_from_tg_transcribed_voices.py
xiaomi_scales_charts/: .flake8  .gitignore  README.md  pyproject.toml  xiaomi_scales_charts.ipynb
