[tool.poetry]
name = "xiaomi_scales_charts"
version = "0.1.0"
description = ""
authors = ["Nikita Shein"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
ipykernel = "^6.29.5"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
